--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/accounting
 spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.password=admin
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
