--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
             <version>3.1.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>24.11.0</version>
+        </dependency>
 
     </dependencies>
 
